deploy/kustomize/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: player-data-service
  namespace: opus-major
  labels:
    app.kubernetes.io/name: player-data-service
    app.kubernetes.io/part-of: opus-major-assignment
    app.kubernetes.io/component: api
spec:
  replicas: 2
  revisionHistoryLimit: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app.kubernetes.io/name: player-data-service
  template:
    metadata:
      labels:
        app.kubernetes.io/name: player-data-service
        app.kubernetes.io/part-of: opus-major-assignment
        app.kubernetes.io/component: api
    spec:
      serviceAccountName: player-data-service
      automountServiceAccountToken: false
      terminationGracePeriodSeconds: 15
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: api
          image: ghcr.io/isoardimarius/player-data-service:0.0.0 # overridden by immutable digest in overlay
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /readyz
              port: http
            initialDelaySeconds: 1
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 3
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 128Mi
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            readOnlyRootFilesystem: true
            capabilities:
              drop: ["ALL"]
